--- a/index.html
+++ b/index.html
@@ -312,8 +312,7 @@
               <div>
                 <h3>>My projects in GitHub</h3>
                 <p><span>( July 28, 2018 )</span><br><br>
-                  I have been actively working on many projects. The source codes of these projects can be found in <a href="http://github.com/rknlhrqy" target="_blank">my GitHub account</a>.<br>
-                  Welcome any feedback and suggestions from you.</p>
+                  I have been actively working on many projects. The source codes of these projects can be found in <a href="http://github.com/rknlhrqy" target="_blank">my GitHub account</a>. Welcome any feedback and suggestions from you.</p>
               </div>
           </div>
           <div class="doc-box special-effect-10">
