Add Node.js Part I/II to Documentation

--- a/index.html
+++ b/index.html
@@ -213,6 +213,36 @@
         </div>
         <div class="row">
           <!--<div class="col span-1-of-2">-->
+            <div class="doc-box special-effect-12">
+              <div>
+                <h3>Node.js!! part 2</h3>
+                <p><span>( Aug 4, 2018 )</span><br><br>
+                Here is Part 2 of the notebook Node.js
+              </div>
+              <div>
+                <a href="https://drive.google.com/file/d/1ixnkmZwTFAXEn180xT8v9QrBJ_bUS9tQ/view?usp=sharing" target="_blank" class="btn-read-artical">Read The Artical</a>
+              </div>
+            </div>
+            <div>
+              <a class="link-back-to-top" href="#top">Back To Top</a>
+            </div>
+ 
+            <div class="doc-box special-effect-11">
+              <div>
+                <h3>Node.js!!</h3>
+                <p><span>( Aug 4, 2018 )</span><br><br>
+                Node.js is for developing back-end or the web server. The front-end is developed using JavaScript+HTML+CSS, REACT or Angular. When a user accesses a website, the front-end will be downloaded into his PC and run in his browser. But the back-end is not downloaded to user's PC. The front-end needs to communicate with back-end.<br>
+                Node.js is based on Chrome V8 Engine. It is an event-driven, non-blocking JavaScript Library.<br>
+                I am using Visual Studio Code to develop the back-end. It is probably the best Node.js IDE. I come up with the following two notebooks which cover most of features of Node.js.<br>
+                There are a lot of libraries/tools to use. I cannot list all of them here: Express, Mocha, Mongoose, Postman, Robo3T, Nodemon, SuperTest,  Heroku, Moment, Socket.IO, Axios, Request, ...Please do go through the notebooks. You will see how powerful these libraries/tools are. One more thing: Chrome DevTools is the best tool to debug the Node.js code. Thanks to Google engineers.<br>
+              </div>
+              <div>
+                <a href="https://drive.google.com/file/d/1NL2qORaYwMKZ4yt_59J4SESXTcwhns2h/view?usp=sharing" target="_blank" class="btn-read-artical">Read The Artical</a>
+              </div>
+            </div>
+            <div>
+              <a class="link-back-to-top" href="#top">Back To Top</a>
+            </div>
             <div class="doc-box special-effect-4">
               <div>
                 <h3>HTML and CSS!!</h3>
