Add the project of Chat platform

--- a/index.html
+++ b/index.html
@@ -338,6 +338,15 @@
         </div>
         <div class="row">
           <!--<div class="col span-1-of-2">-->
+          <div class="doc-box special-effect-13">
+              <div>
+                <h3>Chat Application&frasl;Messaging&nbsp;System</h3>
+                <p><span>( Aug 4, 2018 )</span><br><br>
+                  I created a chat platform for people to text each other in different chat rooms. It has the front-end and back-end. Back-end accesses Mongo DB. All messages are saved to the database. Front-end is implemented using JavaScript, HTML and CSS. Back-end is implemented using Node.js, Express, Socket.IO, Mongoose and tested using Mocha, Expect and SuperTest. You can find <a href="https://github.com/rknlhrqy/udemy-nodejs-node-chat-app" target="_blank">the&nbsp;source&nbsp;code&nbsp;here</a> Please go to this 
+                  <a href="https://udemy-nodejs-node-chat-app.herokuapp.com/" target="_blank">web&nbsp;site</a> to try it. You can open two web pages and talk with yourself.</p>
+              </div>
+          </div>
+ 
           <div class="doc-box special-effect-9">
               <div>
                 <h3>>My projects in GitHub</h3>
